--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,7 +20,7 @@ spring:
             jsonintegration:
               hibernate: CustomPostgreSQL95Dialect
   flyway:
-    locations: filesystem:${ONTOLOGY_DB_MIGRATION_FOLDER},classpath:db/migration
+    locations: filesystem:${ONTOLOGY_DB_MIGRATION_FOLDER:ontology/migration},classpath:db/migration
 
 springdoc:
   swagger-ui:
