--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
     <mockwebserver.version>4.9.3</mockwebserver.version>
     <okhttp3.version>4.9.1</okhttp3.version>
     <postgresql.version>42.4.1</postgresql.version>
+    <spring-security.version>5.8.0</spring-security.version>
   </properties>
 
   <dependencyManagement>
@@ -76,7 +77,6 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-security</artifactId>
-      <version>2.7.2</version>
     </dependency>
 
     <dependency>
