--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
     <java.version>17</java.version>
     <mockwebserver.version>4.12.0</mockwebserver.version>
     <okhttp3.version>4.10.0</okhttp3.version>
-    <ontology-tag>v3.0.1</ontology-tag>
+    <ontology-tag>v3.0.2-alpha.2</ontology-tag>
   </properties>
 
   <dependencies>
