--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>de.medizininformatik-initiative</groupId>
   <artifactId>DataportalBackend</artifactId>
-  <version>7.0.0-SNAPSHOT</version>
+  <version>6.2.0-alpha</version>
 
   <name>Dataportal Backend</name>
   <description>Backend of the Dataportal</description>
@@ -206,7 +206,7 @@
     <dependency>
       <groupId>de.medizininformatik-initiative</groupId>
       <artifactId>sq2cql</artifactId>
-      <version>0.8.0</version>
+      <version>1.0.0-alpha.1</version>
     </dependency>
 
     <dependency>
