--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -111,7 +111,7 @@ services:
         source: dataportal-postgres-data
         target: /var/lib/postgresql/data
   dataportal-elastic:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.16.1
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.17.3
     container_name: dataportal-elastic
     ports:
       - '9200:9200'
@@ -139,7 +139,7 @@ services:
     environment:
       ES_HOST: http://dataportal-elastic
       ES_PORT: 9200
-      ONTO_GIT_TAG: v3.0.2-alpha.2
+      ONTO_GIT_TAG: v3.2.2
       ONTO_REPO: https://github.com/medizininformatik-initiative/fhir-ontology-generator/releases/download
       DOWNLOAD_FILENAME: elastic.zip
       EXIT_ON_EXISTING_INDICES: false
